added more material on Bayesian AR(p) inference

--- a/C4-L04.qmd
+++ b/C4-L04.qmd
@@ -506,11 +506,9 @@ This video goes through the code in the following sections, which simulates data
 The modulus and type (real vs. complex) of reciprocal roots determine persistence and periodicity. The ACF reflects these traits, while the PACF helps identify AR order.
 
 
-## Computing the roots of the AR polynomial 📖
+## Computing the roots of the AR polynomial 📖 ℛ
 
 Compute AR reciprocal roots given the AR coefficients
-
-
 
 ```{r}
 #| label: ar-roots
@@ -525,7 +523,7 @@ lambda=2*pi/Arg(roots) # compute periods of reciprocal roots
 print(cbind(r, abs(lambda))[order(r, decreasing=TRUE), ][c(2,4,6,8),]) 
 ```
 
-## Simulating data from an AR(p) 📖
+## Simulating data from an AR(p) 📖 ℛ
 
 \index{AR(p)}
 \index{ARIMA}
@@ -560,7 +558,7 @@ acf(yt, lag.max = 50,
 pacf(yt, lag.ma = 50, main = "sample PACF")
 ```
 
-2.  R=code to simulate data from an AR(2) with two different real-valued reciprocal roots and plot the corresponding sample ACF and sample PACF
+2.  R code to simulate data from an AR(2) with two different real-valued reciprocal roots and plot the corresponding sample ACF and sample PACF
 
 ```{r}
 #| label: ar-sim-real-valued-roots
