--- a/C4-L05.qmd
+++ b/C4-L05.qmd
@@ -182,19 +182,65 @@ cat("\n MLE of conditional likelihood for phi: ", phi_MLE, "\n",
 
 ## Model order selection 🎥
 
-{{< lipsum 2 >}}
+![model order selection](images/m2_0032.png){#fig-ar-p-model-order-selection .column-margin  group="slides" width="53mm"}
+
+### Goal
+
+Determine the best model order $p$ for an AR($p$) process by comparing candidate models.
+
+### Step 1: Define a candidate set of model orders
+
+$$
+p^* \qquad p=1:p^*
+$$
+
+You choose a maximum order $p^$ (e.g., 20), then evaluate AR models of each order $p \in {1, \dots, p^}$.
+
+### Step 2: Estimate residual variance for each model
 
 
-<!-- TODO: add summary -->
+$$
+S^2_p \qquad y_{(p^*+1):T} 
+$$
+
+For each model of order $p$, compute $S_p^2$ as the residual sum of squares (RSS) using a fixed evaluation window: $t = p^*+1$ to $T$, to ensure all models are evaluated on the same data subset.
+
+### Step 3: Compute model selection criteria
+
+AIC balances fit (log-likelihood) with complexity (number of parameters).
+The first term measures model fit using $\log(S_p^2)$, and the second term penalizes complexity with $2p$.
+
+
+$$
+AIC_p = (T-p^*) \log(S_p^2) + 2p
+$$
+
+BIC uses the same fit term but a heavier penalty: $p \log(T - p^*)$, which increases with sample size. This often leads BIC to favor smaller models than AIC.
+
+$$
+BIC_p = (T-p^*) \log(S_p^2) + p \log(T-p^*)
+$$
+
+::: {.callout-note collapse="true"}
+## Video Transcript {.unnumbered}
+
+{{< include _C4-L05-T02.qmd >}}
+
+:::
 
 ## Example: Bayesian inference in the AR(p), conditional likelihood 🎥
 
-{{< lipsum 2 >}}
+This video demonstrates walks through the code in the next section.
+
+::: {.callout-note collapse="true"}
+## Video Transcript {.unnumbered}
+
+{{< include _C4-L05-T03.qmd >}}
+
+:::
 
 
-<!-- TODO: replace with  summary -->
-
-## R code: Bayesian inference, AR(p), conditional likelihood 📖 {#sec-arp-bayesian-inference}
+## code: Bayesian inference, AR(p), conditional likelihood 📖 ℛ{#sec-arp-bayesian-inference}
 
 ```{r}
 #| label: ar-bayesian-inference
@@ -263,7 +309,7 @@ abline(v=12,col='red')
 
 ```
 
-### R code: Model order selection 📖 {#sec-ar-2-model-order-selection} 
+### code: Model order selection 📖 ℛ {#sec-ar-2-model-order-selection} 
 
 ```{r}
 #| label: ar-2-model-order-selection
@@ -355,15 +401,16 @@ print(paste0("The chosen model order by BIC: ", p))
 ```
 
 
-### Spectral representation of the AR(p) 🎥
+## Spectral representation of the AR(p) 🎥
 
-{{< lipsum 2 >}}
 
 ### Spectral representation of the AR(p): Example 🎥
 
-{{< lipsum 2 >}}
+This video walks through the code in the next section.
 
-### Rcode: Spectral density of AR(p) 📖
+
+
+### Rcode: Spectral density of AR(p) ℛ 📖
 
 ```{r}
 #| label: ar-spectral-density
