--- a/C4-L05.qmd
+++ b/C4-L05.qmd
@@ -194,7 +194,7 @@ $$
 p^* \qquad p=1:p^*
 $$
 
-You choose a maximum order $p^$ (e.g., 20), then evaluate AR models of each order $p \in {1, \dots, p^}$.
+You choose a maximum order $p^*$ (e.g., 20), then evaluate AR models of each order $p \in {1, \dots, p^*}$.
 
 ### Step 2: Estimate residual variance for each model
 
@@ -242,9 +242,11 @@ This video demonstrates walks through the code in the next section.
 
 ## code: Bayesian inference, AR(p), conditional likelihood 📖 ℛ{#sec-arp-bayesian-inference}
 
+### Simulate 300 observations from an AR(2) with one pair of complex-valued roots 
+
 ```{r}
-#| label: ar-bayesian-inference
-# Simulate 300 observations from an AR(2) with one pair of complex-valued roots 
+#| label: fig-ar-bayesian-inference
+#| fig-cap: Simulated AR(2) process with complex-valued roots
 set.seed(2021)
 r=0.95
 lambda=12 
@@ -255,22 +257,31 @@ sd=1 # innovation standard deviation
 T=300 # number of time points
 # generate stationary AR(2) process
 yt=arima.sim(n = T, model = list(ar = phi), sd = sd) 
+
 par(mfrow=c(1,1), mar = c(3, 4, 2, 1) )
 plot(yt)
+```
 
-## Compute the MLE of phi and the unbiased estimator of v using the conditional likelihood
+### Compute the MLE of phi and the unbiased estimator of v using the conditional likelihood
+```{r}
+#| label: ar-bayesian-inference-mle
 p=2
 y=rev(yt[(p+1):T]) # response
 X=t(matrix(yt[rev(rep((1:p),T-p)+rep((0:(T-p-1)),rep(p,T-p)))],p,T-p));
 XtX=t(X)%*%X
 XtX_inv=solve(XtX)
 phi_MLE=XtX_inv%*%t(X)%*%y # MLE for phi
+phi_MLE
 s2=sum((y - X%*%phi_MLE)^2)/(length(y) - p) #unbiased estimate for v
+s2
+```
 
-#####################################################################################
-### Posterior inference, conditional likelihood + reference prior via 
-### direct sampling                 
-#####################################################################################
+
+### Posterior inference, conditional likelihood + reference prior via direct sampling                 
+
+```{r}
+#| label: fig-ar-bayesian-inference-posterior
+#| fig-cap: Posterior distributions of AR(2) parameters
 
 n_sample=1000 # posterior sample size
 library(MASS)
@@ -295,28 +306,35 @@ for(i in 1:2){
 
 hist(v_sample, xlab = bquote(nu), main = bquote("Histogram of "~v),col='lightblue')
 abline(v = sd, col = 'red')
-
-#####################################################
-# Graph posterior for modulus and period 
-#####################################################
-r_sample=sqrt(-phi_sample[,2])
-lambda_sample=2*pi/acos(phi_sample[,1]/(2*r_sample))
-hist(r_sample,xlab="modulus",main="",col='lightblue')
-abline(v=0.95,col='red')
-hist(lambda_sample,xlab="period",main="",col='lightblue')
-abline(v=12,col='red')
-
-
 ```
 
-### code: Model order selection 📖 ℛ {#sec-ar-2-model-order-selection} 
+### Graph posterior for modulus and period 
+```{r}
+#| label: fig-ar-bayesian-inference-roots
+#| fig-cap: Posterior distributions of AR(2) roots
+#| fig-subcap: 
+#| - modulus
+#| - period
+#| layout-ncol: 2
+
+r_sample=sqrt(-phi_sample[,2])
+lambda_sample=2*pi/acos(phi_sample[,1]/(2*r_sample))
+
+hist(r_sample,xlab="modulus",main="",col='lightblue')
+abline(v=0.95,col='red')
+
+hist(lambda_sample,xlab="period",main="",col='lightblue')
+abline(v=12,col='red')
+```
+
+## code: Model order selection 📖 ℛ {#sec-ar-2-model-order-selection} 
+
+### Simulate data from an AR(2)
 
 ```{r}
-#| label: ar-2-model-order-selection
+#| label: fig-ar-2-model-order-selection-simulation
+#| fig-cap: Simulated AR(2) process with complex-valued roots
 
-###################################################
-# Simulate data from an AR(2)
-###################################################
 set.seed(2021)
 r=0.95
 lambda=12 
@@ -327,10 +345,14 @@ sd=1 # innovation standard deviation
 T=300 # number of time points
 # generate stationary AR(2) process
 yt=arima.sim(n = T, model = list(ar = phi), sd = sd) 
+par(mfrow=c(1,1), mar = c(3, 4, 2, 1) )
+plot(yt)
+```
 
-#############################################################################
-######   compute AIC and BIC for different AR(p)s based on simulated data ###
-#############################################################################
+###   compute MLE for different AR(p)s
+
+```{r}
+#| label: ar-2-model-order-selection-MLE
 pmax=10 # the maximum of model order
 Xall=t(matrix(yt[rev(rep((1:pmax),T-pmax)+rep((0:(T-pmax-1)),
               rep(pmax,T-pmax)))], pmax, T-pmax));
@@ -351,6 +373,9 @@ my_MLE <- function(y, Xall, p){
   return(list(b = b, s = s, R = R, nu = nu))
 }
 
+```
+### Compute AIC and BIC for different AR(p)s based on simulated data
+```{r}
 
 ## function for AIC and BIC computation 
 AIC_BIC <- function(y, Xall, p){
@@ -384,9 +409,16 @@ for(p in 1:pmax){
 
 ## compute difference between the value and its minimum
 aic =aic-min(aic) 
+aic
 bic =bic-min(bic) 
+bic
+```
 
-## draw plot of AIC, BIC, and the marginal likelihood
+### draw plot of AIC, BIC, and the marginal likelihood
+
+```{r}
+#| label: fig-ar-2-model-order-selection-plot
+#| fig-cap: AIC and BIC for different AR(p)s
 par(mfrow = c(1, 1), mar = c(3, 4, 2, 1) )
 matplot(1:pmax,matrix(c(aic,bic),pmax,2),ylab='value',
         xlab='AR order p',pch="ab", col = 'black', main = "AIC and BIC")
@@ -403,14 +435,26 @@ print(paste0("The chosen model order by BIC: ", p))
 
 ## Spectral representation of the AR(p) 🎥
 
+::: {.callout-note collapse="true"}
+## Video Transcript {.unnumbered}
 
-### Spectral representation of the AR(p): Example 🎥
+{{< include _C4-L05-T03.qmd >}}
+
+:::
+
+## Spectral representation of the AR(p): Example 🎥
 
 This video walks through the code in the next section.
 
+::: {.callout-note collapse="true"}
+## Video Transcript {.unnumbered}
+
+{{< include _C4-L05-T03.qmd >}}
+
+:::
 
 
-### Rcode: Spectral density of AR(p) ℛ 📖
+## code: Spectral density of AR(p) 📖 ℛ
 
 ```{r}
 #| label: ar-spectral-density
@@ -478,8 +522,6 @@ lines(2*pi*freq,log(spec[i,]),col='darkgray')
 }
 lines(2*pi*freq,log(result_MLE$spec))
 abline(v=2*pi/12,lty=2,col='red')
-
-
 ```
 
 ### Quiz: Spectral representation of the AR(p)
@@ -500,7 +542,7 @@ You will use an AR(8) to model this dataset and obtain maximum likelihood estima
 
 4.  Modify the code below to obtain 500 samples from the posterior distribution of the parameters $\phi=(\phi_1, \ldots \phi_8)'$ and $v$ under the conditional likelihood and the reference prior. You will assume an autoregressive model of order v. Once you obtain samples from the posterior distribution you will compute the posterior means of $\phi$ and $v$, denoted as $\hat\phi$. and $\hat v$, respectively.
 
-Modify the code below to use the function polyroot and obtain the moduli and periods of the reciprocal roots of the AR polynomial evaluated at the posterior mean $\hat\phi$.
+Modify the code below to use the function `polyroot` and obtain the moduli and periods of the reciprocal roots of the AR polynomial evaluated at the posterior mean $\hat\phi$.
 
 ```{r}
 #| label: ar-simulation
