--- a/C4-L05.qmd
+++ b/C4-L05.qmd
@@ -524,92 +524,17 @@ lines(2*pi*freq,log(result_MLE$spec))
 abline(v=2*pi/12,lty=2,col='red')
 ```
 
-### Quiz: Spectral representation of the AR(p)
-
-Omitted due to Coursera's Honor Code
-
-### Graded Assignment: Bayesian analysis of an EEG dataset using an AR(p)
-
-The dataset below corresponds to a portion of an electroencephalogram (EEG) recorded in a particular location on the scalp of an individual. The original EEG dataset was originally recorded at 256Hz but was then subsampled every sixth observations, so the resulting sampling rate is about 42.7 observations per second. The dataset below has 400 observations corresponding approximately to 9.36 seconds.
-
-You will use an AR(8) to model this dataset and obtain maximum likelihood estimation and Bayesian inference for the parameters of the model. For this you will need to do the following:
-
-1.  Download the dataset, and plot it in R. Upload a picture of your graph displaying the data and comment on the features of the data. Does it present any trends or quasi-periodic behavior?
-
-2.  Modify the code below to obtain the maximum likelihood estimators (MLEs) for the AR coefficients under the conditional likelihood. For this you will assume an autoregressive model of order p=8. The parameters of the model are $\phi=(\phi_1, \ldots \phi_8)'$ snf $v$. You will compute the MLE of $\phi$ denoted as $\hat\phi$. ​
-
-3.  Obtain an unbiased estimator for the observational variance of the AR(8). You will compute the unbiased estimator for $v$ denoted as $s^2$.
-
-4.  Modify the code below to obtain 500 samples from the posterior distribution of the parameters $\phi=(\phi_1, \ldots \phi_8)'$ and $v$ under the conditional likelihood and the reference prior. You will assume an autoregressive model of order v. Once you obtain samples from the posterior distribution you will compute the posterior means of $\phi$ and $v$, denoted as $\hat\phi$. and $\hat v$, respectively.
-
-Modify the code below to use the function `polyroot` and obtain the moduli and periods of the reciprocal roots of the AR polynomial evaluated at the posterior mean $\hat\phi$.
-
-```{r}
-#| label: ar-simulation
-
-set.seed(2021)
-r=0.95
-lambda=12 
-phi=numeric(2) 
-phi[1]=2*r*cos(2*pi/lambda) 
-phi[2]=-r^2
-sd=1 # innovation standard deviation
-T=300 # number of time points
-# generate stationary AR(2) process
-yt=arima.sim(n = T, model = list(ar = phi), sd = sd) 
-par(mfrow=c(1,1), mar = c(3, 4, 2, 1) )
-plot(yt)
-
-## Case 1: Conditional likelihood
-p=2
-y=rev(yt[(p+1):T]) # response
-X=t(matrix(yt[rev(rep((1:p),T-p)+rep((0:(T-p-1)),rep(p,T-p)))],p,T-p));
-XtX=t(X)%*%X
-XtX_inv=solve(XtX)
-phi_MLE=XtX_inv%*%t(X)%*%y # MLE for phi
-s2=sum((y - X%*%phi_MLE)^2)/(length(y) - p) #unbiased estimate for v
-
-cat("\n MLE of conditional likelihood for phi: ", phi_MLE, "\n",
-    "Estimate for v: ", s2, "\n")
-    
-#####################################################################################
-##  AR(2) case 
-### Posterior inference, conditional likelihood + reference prior via 
-### direct sampling                 
-#####################################################################################
-
-n_sample=1000 # posterior sample size
-library(MASS)
-
-## step 1: sample v from inverse gamma distribution
-v_sample=1/rgamma(n_sample, (T-2*p)/2, sum((y-X%*%phi_MLE)^2)/2)
-
-## step 2: sample phi conditional on v from normal distribution
-phi_sample=matrix(0, nrow = n_sample, ncol = p)
-for(i in 1:n_sample){
-  phi_sample[i, ]=mvrnorm(1,phi_MLE,Sigma=v_sample[i]*XtX_inv)
-}
-
-## plot histogram of posterior samples of phi and nu
-par(mfrow = c(1, 3),  mar = c(3, 4, 2, 1), cex.lab = 1.3)
-for(i in 1:2){
-  hist(phi_sample[, i], xlab = bquote(phi), 
-       main = bquote("Histogram of "~phi[.(i)]))
-  abline(v = phi[i], col = 'red')
-}
-
-hist(v_sample, xlab = bquote(nu), main = bquote("Histogram of "~v))
-abline(v = sd, col = 'red')
-
-```
-
 ## ARIMA processes 📖
 
-::: {.callout-note}
+This section introduces the ARMA and ARIMA processes, their definitions, stability, invertibility, and spectral density. It is based on a handout from the course. Ideally it should be expanded with more details and examples and code for simulating ARMA and ARIMA processes. I'm not sure why Prado didn't go any deeper in the course, but the NDLMs generalize the ARMA and ARIMA processes, so perhaps we will cover them as special cases of the NDLMs in the next lessons.
 
-### ARMA Model Definition {.unnumbered}
+
 
 \index{ARMA process!definition}
+
+::: {.callout-important}
+## ARMA Model Definition {.unnumbered}
+
 A time series process is a zero-mean autoregressive moving average process if it is given by
 
 $$
@@ -631,8 +556,8 @@ with $\epsilon_t \sim N(0, v)$.
 Next we will define the notions of stability and invertibility of an ARMA process.
 \index{ARMA process!stability}
 
-::: {.callout-info}
-#### Stability Definition {.unnumbered}
+::: {.callout-important}
+## Stability Definition {.unnumbered}
 
 An ARMA process is **stable** if the roots of the AR characteristic polynomial [stable]{.column-margin}
 
@@ -650,8 +575,8 @@ This condition implies stationarity.
 
 \index{ARMA process!invertibility}
 
-::: {.callout-info}
-#### Invertible ARMA Definition {.unnumbered}
+::: {.callout-important}
+## Invertible ARMA Definition {.unnumbered}
 
 An ARMA process is **invertible** if the roots of the MA **characteristic polynomial** given by [invertible]{.column-margin}
 
@@ -670,8 +595,8 @@ Note that $\Phi(B) y_t = \Theta(B) \epsilon_t$.
 
 \index{ARIMA process!definition}
 
-::: {.callout-info}
-#### ARIMA Processes {.unnumbered}
+::: {.callout-important}
+## ARIMA Processes {.unnumbered}
 
 An autoregressive integrated moving average process with orders $p$, $d$, and $q$ is a process that can be written as
 
