added more material on Bayesian AR(p) inference

--- a/C4-L05.qmd
+++ b/C4-L05.qmd
@@ -435,6 +435,10 @@ print(paste0("The chosen model order by BIC: ", p))
 
 ## Spectral representation of the AR(p) 🎥
 
+![Spectral representation of the AR(p)](images/C4-L05-T03.png){#fig-ar-p-spectral-representation .column-margin  group="slides" width="53mm"}
+
+The spectral representation of the AR(p) process is a powerful tool for understanding the frequency domain properties of the process. It allows us to analyze how the process behaves at different frequencies and provides insights into its periodicity and persistence.
+
 ::: {.callout-note collapse="true"}
 ## Video Transcript {.unnumbered}
 
