linked to handouts

--- a/C4-L05.qmd
+++ b/C4-L05.qmd
@@ -530,8 +530,7 @@ abline(v=2*pi/12,lty=2,col='red')
 
 ## ARIMA processes 📖
 
-This section introduces the ARMA and ARIMA processes, their definitions, stability, invertibility, and spectral density. It is based on a handout from the course. Ideally it should be expanded with more details and examples and code for simulating ARMA and ARIMA processes. I'm not sure why Prado didn't go any deeper in the course, but the NDLMs generalize the ARMA and ARIMA processes, so perhaps we will cover them as special cases of the NDLMs in the next lessons.
-
+This section introduces the ARMA and ARIMA processes, their definitions, stability, invertibility, and spectral density. It is based on a [handout](handouts/c4-ARIMA.pdf) from the course. Ideally it should be expanded with more details and examples and code for simulating ARMA and ARIMA processes. I'm not sure why Prado didn't go any deeper in the course, but the NDLMs generalize the ARMA and ARIMA processes, so perhaps we will cover them as special cases of the NDLMs in the next lessons.
 
 
 \index{ARMA process!definition}
@@ -618,6 +617,7 @@ Estimation in ARIMA processes can be done via *least squares*, *maximum likeliho
 
 ### Spectral Density of ARMA Processes
 
+\index{ARMA process!spectral density}
 For a given AR(p) process with AR coefficients $\phi_1, \dots, \phi_p$ and variance $v$, we can obtain its **spectral density** as
 
 $$
