--- a/C4-L04.qmd
+++ b/C4-L04.qmd
@@ -613,6 +613,8 @@ pacf(yt, lag.max = 50, main = "sample PACF")
 
 ## The AR(p): Review 📖 {#sec-arp-review}
 
+This section is based on material from the [handout](handouts/c4-arp_summary.pdf)
+
 ### AR(p): Definition, stability, and stationarity {#sec-arp-definition-stability-stationarity}
 
 ::: {.callout-info}
