--- a/C4-L02.qmd
+++ b/C4-L02.qmd
@@ -20,12 +20,12 @@ keywords:
 ::: {.callout-note collapse="true"}
 ## Learning Objectives
 
--   [x] Define the zero-mean autoregressive process of order one or AR(1) [\#](#l2g1)
+-   [x] Define the zero-mean autoregressive process of order one or *AR(1)* [\#](#l2g1)
 -   [x] use R to obtain samples from this type of process. [\#](#l2g2)
 -   [x] Perform maximum likelihood estimation for the full and conditional likelihood in an AR(1) [\#](#l2g3)
 :::
 
-We will next introduce the autoregressive process of order one, or AR(1) process, which is a fundamental model in time series analysis. We will discuss the definition of the AR(1) process, its properties, and how to simulate data from an AR(1) process.
+We will next introduce the autoregressive process of order one, or *AR(1)* process, which is a fundamental model in time series analysis. We will discuss the definition of the *AR(1)* process, its properties, and how to simulate data from an *AR(1)* process.
 
 ## The AR(1) process 🎥
 
@@ -48,8 +48,9 @@ $$ {#eq-ar1-definition}
 
 where:
 
-where $\phi$ is the AR(1) coefficient
- 
+- $\phi$ is the *AR(1)* coefficient
+- $\varepsilon_t$ are the innovations (or shocks) at time $t$, assumed to be independent and identically distributed (i.i.d.) with mean 0 and variance $v$.
+
 ### AR(1) Recursive Expansion
 
 Recursive substitution yields:
@@ -113,6 +114,7 @@ In the cross product, only terms where lags are the same ($j = k$) contribute, a
 
 ### AR(1) Autocorrelation Function $\rho(h)$
 
+\index{AR(1)!ACF} 
 \index{AR(1)!PACF} 
 Defined by:
 
@@ -133,18 +135,19 @@ $$ {#eq-ar1-autocorrelation}
 
 ### Stationarity
 
-* The process is stationary when $\|\phi\| < 1$:
+\index{AR(1)!stationarity}
 
-  * Mean and variance are constant over time
-  * Autocovariance depends only on lag $h$, not on $t$
+- The process is stationary when $\|\phi\| < 1$:
+  - Mean and variance are constant over time
+  - Autocovariance depends only on lag $h$, not on $t$
 
 
 ## The PACF of the AR(1) process 📖
 
 \index{AR(1)!PACF}
 \index{Durbin-Levinson recursion}
-It is possible to show that the **PACF** of an AR(1) process is zero after the first lag. 
-We can use the Durbin-Levinson recursion to show this.
+It is possible to show that the **PACF** of an *AR(1)* process is zero after the first lag. 
+We can use the **Durbin-Levinson recursion** to show this.
 
 For lag $n = 0$ we have $\phi(0, 0) = 0$
 
@@ -152,19 +155,23 @@ For lag $n = 1$ we have:
 
 $$
 \phi(1, 1) =  \rho(1) = \phi
-$$
+$$ {#eq-ar1-pacf-lag1}
 
 For lag $n = 2$ we compute $\phi(2, 2)$ as:
 
 $$
-\phi(2, 2) = \frac{(\rho(2) − \phi(1, 1)\rho(1))}{ (1 − \phi(1, 1)\rho(1))} = \frac{\phi^2-\phi^2}{1- \phi^2}=0
-$$
+\begin{aligned}
+\phi(2, 2) &= \frac{(\rho(2) − \phi(1, 1)\rho(1))}{ (1 − \phi(1, 1)\rho(1))} \\
+&= \frac{\phi^2-\phi^2}{1- \phi^2}\\
+&=0
+\end{aligned}
+$$ {#eq-ar1-pacf-lag2}
 
-and we also obtain
+and we also obtain:
 
 $$
 \phi(2, 1) = \phi(1, 1) − \phi(2, 2)\phi(1, 1) = \phi.
-$$
+$$ {#eq-ar1-pacf-lag2-1}
 
 For lag $n = 3$ we compute $\phi(3, 3)$ as
 
@@ -175,19 +182,19 @@ $$
 &= \frac{\phi^3 - \phi^3 - 0}{1 - \phi^2 } \newline
 &= 0
 \end{aligned}
-$$
+$$ {#eq-ar1-pacf-lag3}
 
 and we also obtain
 
 $$
 \phi(3, 1) = \phi(2, 1) − \phi(3, 3)\phi(2, 2) = \phi
-$$
+$$ {#eq-ar1-pacf-lag3-1}
 
 $$
 \phi(3, 2) = \phi(2, 2) − \phi(3, 3)\phi(2, 1) = 0
-$$
+$$ {#eq-ar1-pacf-lag3-2}
 
-We can prove by *induction* that in the case of an AR(1), for any lag $n$,
+We can prove by *induction* that in the case of an *AR(1)*, for any lag $n$,
 
 $\phi(n, h) = 0, \phi(n, 1) = \phi$ and $\phi(n, h) = 0$ for $h \ge 2$ and $n \ge 2$.
 
@@ -195,9 +202,9 @@ Then, [the PACF of an AR(1) is zero for any lag above 1 and the **PACF** coeffic
 
 ### Simulate data from an AR(1) process 🎥 {#sec-ar1-simulation}
 
-This video walks through the code snippet below and provides examples of how to sample data from an AR(1) process and plot the ACF and PACF functions of the resulting time series.
+This video walks through the code snippet below and provides examples of how to sample data from an *AR(1)* process and plot the ACF and PACF functions of the resulting time series.
 
-Prado demonstrates how to simulate AR(1) processes using `arima.sim` in R:
+Prado demonstrates how to simulate *AR(1)* processes using `arima.sim` in R:
 
 * **Simulation Setup**:
 
@@ -212,7 +219,7 @@ Prado demonstrates how to simulate AR(1) processes using `arima.sim` in R:
 
 * **Comparative Simulation**:
 
-  * Second AR(1) simulated with $\phi = –0.9$ to show the impact of negative $\phi$.
+  * Second *AR(1)* simulated with $\phi = –0.9$ to show the impact of negative $\phi$.
   * The positive $\phi$ process shows persistent values (random walk-like).
   * The negative $\phi$ process shows oscillatory behavior.
 
@@ -233,7 +240,10 @@ The demonstration confirms our theoretical results regarding ACF/PACF behavior i
 ###  R code: Sample data from AR(1) processes 📖
 
 \index{AR(1)}
+\index{AR(1)!ACF}
+\index{AR(1)!PACF}
 \index{ARIMA}
+
 
 [Sample data from 2 ar(1) processes]{#l2g2 .mark}: and plot their ACF and PACF functions
 
