--- a/C4-L04.qmd
+++ b/C4-L04.qmd
@@ -613,7 +613,7 @@ pacf(yt, lag.max = 50, main = "sample PACF")
 
 ## The AR(p): Review 📖 {#sec-arp-review}
 
-This section is based on material from the [handout](handouts/c4-arp_summary.pdf)
+This section is based on material from the [handout](handouts/c4-arp_summary.pdf) but we also covered it in greater detail at the beginning of the lecture.
 
 ### AR(p): Definition, stability, and stationarity {#sec-arp-definition-stability-stationarity}
 
