--- a/C1-L01.qmd
+++ b/C1-L01.qmd
@@ -26,7 +26,7 @@ keywords:
 ## Introduction {#sec-introduction}
 
 In these notes I supplement the course material with my own notes for establishing an axiomatic foundation for probability.
-These were ostentatiously omitted from the specialization material, but alluded to in many places as a form of hand waving for introducing results. I found their absence increasingly irksome that I decided to add them to my notes. In reality probability theory is a beautiful part of Mathematics and bring together many results from analysis, topology, functional analysis and integration theory. I hope that adding this material will make your journey easier and not more challenging. In the future I hope to dive a little deeper, as progressing with the specialization has uncovered additional topics in probability theory that might be useful to review. When this happens, I will move most of these extras into thier own appendecies. 
+These were ostentatiously omitted from the specialization material, but alluded to in many places as a form of hand waving for introducing results. I found their absence increasingly irksome that I decided to add them to my notes. In reality probability theory is a beautiful part of Mathematics and bring together many results from analysis, topology, functional analysis and integration theory. I hope that adding this material will make your journey easier and not more challenging. In the future I hope to dive a little deeper, as progressing with the specialization has uncovered additional topics in probability theory that might be useful to review. When this happens, I will move most of these extras into their own appendecies. 
 
 
 ```{python}
