excercise  and honnor code compliance

--- a/C4-L07.qmd
+++ b/C4-L07.qmd
@@ -57,12 +57,12 @@ Splitting a TS into trend periods and a stationary residual isn't too tricky in 
 
 ## Filtering 🎥
 
-![Derivation for the Prior and Forecast at Time t](images/m3_0041.png){.column-margin  group="slides" width="53mm"}
+![Derivation for the Prior and Forecast at Time t](images/m3_0041.png){#fig-derivation-for-the-prior-and-forecast-at-time-t .column-margin  group="slides" width="53mm"}
 
 
 
 
-![Derivation of the Posterior at Time t](images/m3_0042.png){.column-margin  group="slides" width="53mm"}
+![Derivation of the Posterior at Time t](images/m3_0042.png){#fig-derivation-of-the-posterior-at-time-t .column-margin  group="slides" width="53mm"}
 
 
 
@@ -289,7 +289,7 @@ C_t &= R_t - A_t q_t A_t'
 \end{aligned}
 $$
 
-## Rcode Filtering in the NDLM: Example 📖
+## code Filtering in the NDLM: Example 📖 ℛ
 
 ```{r}
 #| label: lst-filtering-in-the-NDLM
@@ -527,12 +527,12 @@ lines(index,LakeHuron,lty=2)
 
 ## Smoothing and forecasting 🎥
 
-![Smoothing](images/m3_0051.png){.column-margin group="slides" width="53mm"}
+![Smoothing](images/m3_0051.png){#fig-smoothing .column-margin group="slides" width="53mm"}
 
 
 
 
-![Forecasting](images/m3_0052.png){.column-margin group="slides" width="53mm"}
+![Forecasting](images/m3_0052.png){#fig-forecasting .column-margin group="slides" width="53mm"}
 
 
 
@@ -699,9 +699,9 @@ $$
 
 ## Smoothing in the NDLM, Example 🎥
 
+This segment covers the code  in the following section
 
-
-## R code: Smoothing in the NDLM, Example 📖 {#sec-smoothing-in-the-NDLM}
+## Code: Smoothing in the NDLM, Example 📖 ℛ {#sec-smoothing-in-the-NDLM}
 
 ```{r}
 #| label: lst-smoothing-in-the-NDLM
@@ -946,7 +946,7 @@ The `dlm` package in R is a powerful tool for working with dynamic linear models
 
 :::
 
-## R code: Using the `dlm` package in R 📖 {#sec-dlm-package}
+## Code: Using the `dlm` package 📖 ℛ {#sec-dlm-package}
 
 ```{r}
 #| label: lst-dlm-package
@@ -1215,95 +1215,3 @@ lines(as.vector(time(co2)),results_smoothed_dlm$s[-1,1],
 ```
 
 
-
-## Practice Graded Assignment: NDLM -- sensitivity to the model parameters
-
-::::: {.content-visible unless-profile="HC"}
-
-::: {.callout-caution}
-Section omitted to comply with the Honor Code
-:::
-
-:::::
-
-::::: {.content-hidden unless-profile="HC"}
-
-
-
-
-
-This is a peer reviewed assignment. I may drop in the instructions but the solution will not be provided here due to the Coursera honor code.
-
-This peer-reviewed activity is highly recommended. It does not figure into your grade for this course, but it does provide you with the opportunity to apply what you've learned in R and prepare you for your data analysis project in week 5. 
-
-Consider the following R code: 
-
-```{r}
-#| label: lst-sensitivity-to-model-params
-
-#######################
-##### DLM package #####
-#######################
-
-library(dlm)
-k=4
-T=length(LakeHuron)-k # We take the first 
-                      # 94 observations only as our data
-index=seq(1875, 1972, length.out = length(LakeHuron))
-index_filt=index[1:T]
-
-model=dlmModPoly(order=1,dV=1,dW=1,m0=570,C0=1e4)
-results_filtered_dlm=dlmFilter(LakeHuron[1:T],model)
-results_smoothed_dlm=dlmSmooth(results_filtered_dlm)
-
-plot(index_filt, LakeHuron[1:T], ylab = "level", 
-     main = "Lake Huron Level",
-     type='l', xlab="time",lty=3,ylim=c(575,583))
-points(index_filt,LakeHuron[1:T],pch=20)
-lines(index_filt,results_filtered_dlm$m[-1],col='red',lwd=2)
-lines(index_filt,results_smoothed_dlm$s[-1],col='blue',lwd=2)
-legend(1880,577, legend=c("filtered", "smoothed"),
-       col=c("red", "blue"), lty=1, cex=0.8)
-```
-
-
-Note that you will need to install the `dlm` package in R if you don't have it  installed in order to run the code above. After installing the package and running the code above you will be asked to change some of the model specifications, upload some graphs and and answer some questions. In particular, you will be asked to: 
-
-1. Modify the above code to change the variance of the prior distribution from $C_0=10^4$ to $C_0=10$ and plot and upload the traces of $\mathbb{E}(\theta_t \mid \mathcal D_T)$ (mean of the filtered distribution) and $\mathbb{E}(\theta_t \mid \mathcal D_T)$ for $T\geq t$ and all $t=1:T$ (mean of the smoothed distribution). Are these new results different from the results with the model with $C_0=10^4$?
-
-2. Keep the variance of the prior distribution at $C_0=10^4$. Now change the evolution variance from 
-$W=1$ to $W=0.01$ . Plot and upload the new means of the filtered and smoothed results. Are they different from the results when evolution variance is $W=1$ ?
-
-::: {.callout-info}
-
-### Grading Criteria
-
-Peer reviewers will be asked to check whether 
-
-1. the plots are correct, especially the shape of red and blue lines. 
-2. the responses provided to the questions are correct. 
-
-To receive full credit for this assignment you will have to grade the assignments of 2 students taking the course.
-
-:::
-
-
-::::
-
-
-
-:::::
-
-## Homework - NDLM, Part I: Review
-
-::::: {.content-visible unless-profile="HC"}
-
-::: {.callout-caution}
-Section omitted to comply with the Honor Code
-:::
-
-:::::
-
-::::: {.content-hidden unless-profile="HC"}
-
-:::::
