--- a/C4-L06.qmd
+++ b/C4-L06.qmd
@@ -275,7 +275,7 @@ $$
 \mathbb{P}r(\theta_t \mid \mathcal{D}_T)  \qquad t < T \qquad \text{smoothing distribution}
 $$ {#eq-NDLM-smoothing-distribution}
 
-### The forecast function for the NDLM
+### The forecast function for the NDLM 
 
 In addition to all the structure that we described before and all the densities that we are interested in finding, we also have as usual, the so-called *forecast function*, which instead of being the density is just $\mathbb{E}[y(t+h)\mid \mathcal{D}_t]$ i.e. expected value of y at time t given all the information we have before time t. 
 
@@ -312,10 +312,10 @@ $$ {#eq-NDLM-model-shothand-notation}
 
 ## Polynomial Trend Models 🎥
 
-![first and second order polynomial model](images/m3_0011.png){.column-margin  group="slides" width="53mm"}
+![first and second order polynomial model](images/m3_0011.png){#fig-first-and-second-order-polynomial-model .column-margin  group="slides" width="53mm"}
 
 
-![p-order polynomial model](images/m3_0012.png){.column-margin  group="slides" width="53mm"}
+![p-order polynomial model](images/m3_0012.png){#fig-p-order-polynomial-model .column-margin  group="slides" width="53mm"}
 
 
 While we haven't talked about the superposition principle yet we start at looking at adding different components to the DLM. 
@@ -836,7 +836,7 @@ $$
 
 ## The superposition principle 🎥
 
-![The superposition principle](images/m3_0031.png){.column-margin  group="slides" width="53mm"}
+![The superposition principle](images/m3_0031.png){#fig-superposition-principle .column-margin  group="slides" width="53mm"}
 
 
 [We can use the superposition principle to build models that have different kinds of components. The main idea is to think about what is the general structure we want for the forecast function and then isolate the different components of the forecast function and think about the classes of dynamic linear models that are represented in each of those components.]{.mark} Each of those components has a class and then we can build the general dynamic linear model with all those pieces together using this principle.
